<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editakun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mid"
    android:paddingLeft="16sp"
    android:paddingTop="16sp"
    android:paddingRight="16sp"
    android:paddingBottom="16sp"
    tools:context=".EditakunActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="157dp"
            android:layout_height="139dp"
            android:contentDescription="@string/ubah"
            app:layout_constraintBottom_toTopOf="@+id/tampilusername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.496"
            app:srcCompat="@drawable/avatar" />

        <EditText
            android:id="@+id/updateUsername"
            android:layout_width="284dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_border"
            android:fontFamily="@font/calistoga"
            android:hint="@string/username2"
            android:textAlignment="center"
            android:textColor="@color/mid"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/updatePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.898"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="126dp"
            android:layout_height="53dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_bt"
            android:text="@string/ubah"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tampilusername"
            android:layout_width="284dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_border"
            android:fontFamily="@font/calistoga"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/mid"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/updateUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.894"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/updatePassword"
            android:layout_width="284dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_border"
            android:fontFamily="@font/calistoga"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="@color/mid"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_viewedit"
        app:headerLayout="@layout/header"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>
